# cppStart

./: .gitignore  README.md  test.md  小结.md
PAT/: 000Template  000Template.cc  ccsplit  ccsplit.cc
PAT/basic_level_practice/: 1001  1001.cc  1002  1002.cc  1003  1003.cc  1004.cc  1005  1005.cc  1006  1006.cc
SimpleCppServer/: simpleserver.cpp
benchmark/nbody/: CMakeLists.txt  build.sh  index.cpp  run.sh
designpattern/创建型模式/: maze.cc  maze.md
leetcode/: 1.两数之和.cpp  1002.easy查找常用字符.cpp  105.从前序与中序遍历序列构造二叉树.cpp  106.从中序与后序遍历序列构造二叉树.cpp  114.二叉树展开为链表.cpp  116.medium填充每个节点的下一个右侧节点指针BFS better.cpp  116.填充每个节点的下一个右侧节点指针BFS.cpp  1207.easy.独一无二的出现次数.cpp  129.medium求根节点到叶子节点数字之和.cpp  143.easy.重排链表.cpp  1470.重新排列数组.cpp  1512.好数对.cpp  1608.特殊数组的特征值.cpp  1609.奇偶数.cpp  1619.easy删除某些元素后的数组均值.cpp  1620.medium.网络信号最好的坐标.cpp  1624.easy.两个相同字符之间的最长子字符串.cpp  203.easy移除链表元素.cpp  226.easy翻转二叉树.cpp  236.二叉树的公共最近祖先.cpp  24.medium两两交换链表中的节点.cpp  328.medium.奇偶链表.cpp  34.medium.在排序数组中查找元素的第一个和最后一个位置.cpp  35.easy.搜索插入位置.cpp  430.medium.扁平化多级双向链表.cpp  443.medium.压缩字符串.cpp  448.easy.找到所有数组中消失的数字.cpp  46.全排列(回溯).cpp  46.全排列(回溯swap).cpp  463.easy.岛屿的周长.cpp  501.easy.二叉搜索树中的众数.cpp  509.easy.斐波那契数列.cpp  51.hard.N皇后.cpp  52.hard.N皇后 II.cpp  53.easy.最大子序和.cpp  530.easy二叉搜索树的最小绝对差.cpp  5554.easy.能否连接形成数组.cpp  5555.medium.统计字典序元音字符串的数目.cpp  5556.medium.可以到达的最远建筑.cpp  654.最大二叉树.cpp  (+7 more)
leetcode-extension/leetcode-extension/: 103.二叉树的锯齿形层序遍历.cpp  46.全排列.cpp  58.最后一个单词的长度.cpp  99.恢复二叉搜索树.cpp
leetcode-learn/arrays101/: intro.md
leetcode-learn/linked_list/: intro.md
leetcode-learn/tree/: intro.md  二叉树知识点.md  递归方法论.md
leetcode/leetcode-extension/: 1.两数之和.cpp  100.相同的树.cpp  1005.k-次取反后最大化的数组和.cpp  101.对称二叉树.cpp  102.二叉树的层序遍历.cpp  104.二叉树的最大深度.cpp  1047.删除字符串中的所有相邻重复项.cpp  1052.爱生气的书店老板.cpp  106.从中序与后序遍历序列构造二叉树.cpp  107.二叉树的层序遍历-ii.cpp  108.将有序数组转换为二叉搜索树.cpp  110.平衡二叉树.cpp  111.二叉树的最小深度.cpp  112.路径总和.cpp  113.路径总和-ii.cpp  1208.尽可能使字符串相等.cpp  122.买卖股票的最佳时机-ii.cpp  129.求根到叶子节点数字之和.cpp  131.分割回文串.cpp  134.加油站.cpp  136.easy.只出现一次的数字.cpp  141.环形链表.cpp  142.环形链表-ii.cpp  144.二叉树的前序遍历.cpp  145.二叉树的后序遍历.cpp  1490.克隆-n-叉树.cpp  15.三数之和.cpp  150.逆波兰表达式求值.cpp  151.翻转字符串里的单词.cpp  1592.重新排列单词间的空格.cpp  17.电话号码的字母组合.cpp  18.四数之和.cpp  191.位-1-的个数.cpp  199.二叉树的右视图.cpp  20.有效的括号.cpp  202.快乐数.cpp  203.移除链表元素.cpp  206.反转链表.cpp  209.长度最小的子数组.cpp  216.组合总和-iii.cpp  (+71 more)
notes/: index.md
practice/: 0text.cpp  Sales_data.h  binarySearch  binarySearch.cpp  carray.cpp  carrayIter.cpp  compareStr.cpp  computeSalesData.cpp  computeScore.cpp  countPunct.cpp  cstring.cpp  floatponitprecesion.cpp  func.cpp  genericAlgorithm.cpp  io.cpp  iterator.cpp  lambda.cpp  mem.cpp  numberTohex.cpp  optStr.cpp  optVec.cpp  ptrCompare.cpp  refFunc.cpp  runcpp.sh  start0.cpp  temp.cpp  testTimer.cpp  tmp.cpp  trycatch.cpp  vectorOpts.cpp
practice/multiSource/: compute.cpp  compute.h  main.cpp
practices/: start0.cpp
tryCmake/: CMakeLists.txt
tryCmake/2-static-library/: CMakeLists.txt  build.sh  readme.md
(+69 files in other folders)
